--- a/my-app/src/components/chart/Chart.module.css
+++ b/my-app/src/components/chart/Chart.module.css
@@ -8,3 +8,15 @@
     justify-content: space-around;
     height: 10rem;
 }
+
+.chartViolet {
+    background-color: blueviolet;
+}
+
+.chartGreen {
+    background-color:violet;
+}
+
+.chartRed {
+    background-color: red;
+}
